--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ Backup.bat
 # Mono auto generated files
 mono_crash.*
 
+# Certificates for testing
+[Cc]ertificates/
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
