--- a/.infrastructure/Deploy/pipes/templates/create-infra-template.yml
+++ b/.infrastructure/Deploy/pipes/templates/create-infra-template.yml
@@ -66,6 +66,9 @@ jobs:
       echo "runDateTime=$(runDateTime)"
       echo "templateFile=$(templateFile)"
       echo "compiledJsonFile=$(compiledJsonFile)"
+      echo "Pipeline.Workspace=$(Pipeline.Workspace)"
+      tree $(Pipeline.Workspace)
+      dir $(Pipeline.Workspace) /s
     displayName: 'Display Variables'
     continueOnError: true
 
@@ -88,7 +91,7 @@ jobs:
       azureSubscription: $(serviceConnectionName)
       scriptType: bash
       scriptLocation: inlineScript
-      inlineScript: az group create --name $(resourceGroupName) --location $(region)
+      inlineScript: az group create --name $(resourceGroupName) --location $(location)
 
   - task: AzureResourceManagerTemplateDeployment@3
     displayName: 'Publish Bicep Resources'
