Fix broken name in web deploy

--- a/.infrastructure/Deploy/pipes/templates/deploy-website-template.yml
+++ b/.infrastructure/Deploy/pipes/templates/deploy-website-template.yml
@@ -19,8 +19,8 @@ jobs:
   displayName: Initialize ${{ parameters.environmentName }} Deploy Website
   environment: ${{ parameters.environmentName }}
 
-- job: DeployApplication${{ parameters.environmentName }}Website
-  displayName: Deploy ${{ parameters.environmentName }} Website
+- job: DeployApplication${{ parameters.environmentName }}WebsiteJob
+  displayName: Deploy ${{ parameters.environmentName }} Website Job
   variables:
     - group: ${{ parameters.variableGroupName }}
     - name: environmentNameUpper
