--- a/.infrastructure/Deploy/pipes/simulator-only-pipeline-template.yml
+++ b/.infrastructure/Deploy/pipes/simulator-only-pipeline-template.yml
@@ -13,7 +13,7 @@ stages:
 - stage: BuildSimulator
   displayName: Build Simulator
   jobs:
-  - template: templates/simulator-build-template.yml.yml
+  - template: templates/simulator-build-template.yml
     parameters:
       variableGroupName: ${{ parameters.variableGroupName }}
       environmentName: 'DEV'
