Set infra pipeline to only trigger on master change

--- a/.infrastructure/Deploy/infra-only-pipeline.yml
+++ b/.infrastructure/Deploy/infra-only-pipeline.yml
@@ -10,6 +10,9 @@ pool:
 
 # ------------------------------------------------------------------------------------------------------------------------
 trigger:
+  branches:
+    include: 
+      - master
   paths:
     include: 
       - '**/*.yml'
