Update website build name

--- a/.infrastructure/Deploy/website-only-pipeline.yml
+++ b/.infrastructure/Deploy/website-only-pipeline.yml
@@ -2,7 +2,7 @@
 # Pipeline to build and deploy Website Only
 #  See ../Docs/Create-Variable-Group.md for for info about variable group "IoTDemo"
 # ------------------------------------------------------------------------------------------------------------------------
-name: $(Build.DefinitionName).$(date:yyyy).$(date:MM).$(date:dd)$(rev:.r)
+name: $(date:yyyy).$(date:MM).$(date:dd)$(rev:.r)
 
 trigger:
   batch: true
