Change environments to only do DEV

--- a/.infrastructure/Deploy/build-simulator-pipeline.yml
+++ b/.infrastructure/Deploy/build-simulator-pipeline.yml
@@ -26,4 +26,4 @@ stages:
 - template: pipes/simulator-only-pipeline-template.yml
   parameters:
     variableGroupName: 'IoTDemo'
-    environments: ['DEV','QA']  # ['DEV'] or ['DEV','QA'] or ['DEV','QA','PROD']
+    environments: ['DEV']  # ['DEV','PROD'] ['DEV','QA'] or ['DEV','QA','PROD']
