--- a/.infrastructure/Deploy/pipes/templates/console-app-deploy-template.yml
+++ b/.infrastructure/Deploy/pipes/templates/console-app-deploy-template.yml
@@ -23,7 +23,7 @@ jobs:
     - name: environmentNameLower
       value: ${{ lower(parameters.environmentName) }}
     - name: blobPrefix
-      value: 'IoT-Simulator/'
+      value: ${{ parameters.blobPrefix }}
 
   steps:
   - task: DownloadBuildArtifacts@0
