--- a/.infrastructure/Deploy/pipes/website-only-pipeline-template.yml
+++ b/.infrastructure/Deploy/pipes/website-only-pipeline-template.yml
@@ -4,7 +4,7 @@
 parameters:
 - name: environments
   type: object
-  default: ['DEV'] # or ['DEV','QA'] or ['DEV','QA','PROD'] or ['DEV','QA','STG','PROD']
+  default: ['DEV']
 - name: variableGroupName
   default: 'myVariableGroupName'
 - name: folderName
