--- a/.infrastructure/Deploy/infra-only-pipeline.yml
+++ b/.infrastructure/Deploy/infra-only-pipeline.yml
@@ -24,4 +24,4 @@ stages:
 - template: pipes/infra-only-pipeline-template.yml
   parameters:
     variableGroupName: 'IoTDemo'
-    environments: ['DEV']  # ['DEV','PROD'] ['DEV','QA'] or ['DEV','QA','PROD']
+    environments: ['DEMO']  # ['DEV','PROD'] ['DEV','QA'] or ['DEV','QA','PROD']
