--- a/.infrastructure/Deploy/pipes/templates/create-infra-template.yml
+++ b/.infrastructure/Deploy/pipes/templates/create-infra-template.yml
@@ -85,7 +85,7 @@ jobs:
       azureSubscription: $(serviceConnectionName)
       scriptType: bash
       scriptLocation: inlineScript
-      inlineScript: az group create --name $(resourceGroupName) --location $(location)
+      inlineScript: az group create --name $(resourceGroupName) --location $(location) --tags LastDeployed=$(runDateTime) Organization=$(orgPrefix) Application=$(appPrefix) Environment=$(environmentNameUpper)
 
   - task: AzureResourceManagerTemplateDeployment@3
     displayName: 'Publish Bicep Resources'
