--- a/.azdo/pipelines/console-app-pipeline.yml
+++ b/.azdo/pipelines/console-app-pipeline.yml
@@ -1,13 +1,8 @@
 # ------------------------------------------------------------------------------------------------------------------------
-# Pipeline to deploy IoT Function App Processor for the IoT Demo Project
+# Pipeline to build IoT Simulator; compiles for both Windows (x64) and Linux; copies EXE to storage for downloading ease
 # ------------------------------------------------------------------------------------------------------------------------
 # Note: This pipeline needs a variable group "IoTDemo"
-#  See ../Docs/Create-Variable-Group.md for details
-# ------------------------------------------------------------------------------------------------------------------------
-name: $(date:yyyy).$(date:MM).$(date:dd)$(rev:.r)
-pool:
-  vmImage: windows-latest
-
+#  See ./Docs/Create-Variable-Group.md for details
 # ------------------------------------------------------------------------------------------------------------------------
 trigger:
   branches:
@@ -15,15 +10,20 @@ trigger:
       - main
   paths:
     include:
-      - FunctionApp
+      - Simulator
     exclude: 
       - '**/*.yml'
       - '**/*.yaml'
       - '**/*.bicep'
 
+pool:
+  vmImage: 'windows-latest'
+
+name: $(date:yyyy).$(date:MM).$(date:dd)$(rev:.r)
+
 # ----------------------------------------------------------------------------------------------------
 stages:
-- template: pipes/function-only-pipeline-template.yml
+- template: pipes/console-app-pipeline-template.yml
   parameters:
     variableGroupName: 'IoTDemo'
     environments: ['DEMO']  # ['DEV','PROD'] ['DEV','QA'] or ['DEV','QA','PROD']
