--- a/.azdo/pipelines/function-only-pipeline.yml
+++ b/.azdo/pipelines/function-only-pipeline.yml
@@ -1,12 +1,12 @@
 # ------------------------------------------------------------------------------------------------------------------------
-# Pipeline to deploy Azure Resources Only
+# Pipeline to deploy IoT Function App Processor for the IoT Demo Project
 # ------------------------------------------------------------------------------------------------------------------------
 # Note: This pipeline needs a variable group "IoTDemo"
-#  See ../Docs/Create-Variable-Group.md for details
+#  See ./Docs/Create-Variable-Group.md for details
 # ------------------------------------------------------------------------------------------------------------------------
 name: $(date:yyyy).$(date:MM).$(date:dd)$(rev:.r)
 pool:
-  vmImage: ubuntu-latest
+  vmImage: windows-latest
 
 # ------------------------------------------------------------------------------------------------------------------------
 trigger:
@@ -14,14 +14,16 @@ trigger:
     include: 
       - main
   paths:
-    include: 
+    include:
+      - FunctionApp
+    exclude: 
       - '**/*.yml'
       - '**/*.yaml'
       - '**/*.bicep'
 
 # ----------------------------------------------------------------------------------------------------
 stages:
-- template: pipes/infra-only-pipeline-template.yml
+- template: pipes/function-only-pipeline-template.yml
   parameters:
     variableGroupName: 'IoTDemo'
     environments: ['DEMO']  # ['DEV','PROD'] ['DEV','QA'] or ['DEV','QA','PROD']
