--- a/.azdo/pipelines/pipes/function-only-pipeline-template.yml
+++ b/.azdo/pipelines/pipes/function-only-pipeline-template.yml
@@ -2,7 +2,7 @@
 # Pipeline to deploy IoT Function App Processor for the IoT Demo Project
 # ------------------------------------------------------------------------------------------------------------------------
 # Note: This pipeline needs a variable group "IoTDemo"
-#  See ../Docs/Create-Variable-Group.md for details
+#  See ./Docs/Create-Variable-Group.md for details
 # ------------------------------------------------------------------------------------------------------------------------
 parameters:
 - name: environments
