--- a/.azdo/pipelines/pipes/templates/build-website-template.yml
+++ b/.azdo/pipelines/pipes/templates/build-website-template.yml
@@ -103,12 +103,12 @@ jobs:
       platform: '$(buildPlatform)'
       configuration: '$(buildConfiguration)'
       
-  - task: VSTest@2
-    displayName: 'Test Application'
-    inputs:
-      searchFolder: '$(rootDirectory)'
-      platform: '$(buildPlatform)'
-      configuration: '$(buildConfiguration)'
+  # - task: VSTest@2
+  #   displayName: 'Test Application'
+  #   inputs:
+  #     searchFolder: '$(rootDirectory)'
+  #     platform: '$(buildPlatform)'
+  #     configuration: '$(buildConfiguration)'
       
   - task: DotNetCoreCLI@2
     displayName: "DotNet Publish"
