--- a/.azdo/pipelines/pipes/templates/create-infra-template.yml
+++ b/.azdo/pipelines/pipes/templates/create-infra-template.yml
@@ -4,12 +4,10 @@
 parameters:
 - name: variableGroupName
   default: 'myVariableGroup'
-- name: environmentName 
+- name: environmentName
   default: 'DEV'
-- name: runDateTime
-  default: '12-31-2020 23:59:59'
 - name: templateFolderName
-  default: '.infrastructure/Bicep'
+  default: 'infra/Bicep'
 - name: templateFileName
   default: 'main.bicep'
 
@@ -27,8 +25,6 @@ jobs:
       value: ${{ upper(parameters.environmentName) }}
     - name: environmentNameLower
       value: ${{ lower(parameters.environmentName) }}
-    - name: runDateTime
-      value: ${{ parameters.runDateTime }}
     - name: resourceGroupSuffixBase
       value: '_${{ lower(parameters.environmentName) }}'
     - name: resourceGroupSuffix
@@ -77,7 +73,6 @@ jobs:
 
   # - script: az bicep build --file $(templateFile) --outfile $(compiledJsonFile)
   #   displayName: 'Compile Bicep file'
-  #   continueOnError: true
 
   - task: AzureCLI@2
     displayName: 'Create Resource Group'
