--- a/.azdo/pipelines/website-only-pipeline.yml
+++ b/.azdo/pipelines/website-only-pipeline.yml
@@ -17,8 +17,16 @@ trigger:
       - '**/*.bicep'
       - '**/*.md'
 
-pool:
-  vmImage: windows-latest
+# ----------------------------------------------------------------------------------------------------
+parameters:
+  - name: runDevSecOpsScan
+    displayName: Run MS DevSecOps Scan
+    type: boolean
+    default: false
+  - name: runPsRuleScan
+    displayName: Run PSRule Bicep Scan
+    type: boolean
+    default: false
 
 # ----------------------------------------------------------------------------------------------------
 stages:
@@ -29,3 +37,5 @@ stages:
     projectName: 'IoT.Dashboard'
     webAppName: 'Dashboard'
     environments: ['DEMO']  # ['DEV','PROD'] ['DEV','QA'] or ['DEV','QA','PROD']
+    runDevSecOpsScan: ${{ parameters.runDevSecOpsScan }}
+    runPsRuleScan: ${{ parameters.runPsRuleScan }}
