App insights update (#6)
* Update Application Insights to Log Workspaces; rename folders

* Comment out web test task as there are no tests...

* Fix bicep folder name; add security scan templates

* Rename loganalytics bicep step

* Add missing parm for workspace id to function and web apps

* Add diagnostic settings to key vault

* Try setting diagnostics on app not service...?

* Update diagnostic logging settings

---------

Co-authored-by: Pipeline <pipeline@demo.com>

--- a/.azdo/pipelines/console-app-pipeline.yml
+++ b/.azdo/pipelines/console-app-pipeline.yml
@@ -2,7 +2,7 @@
 # Pipeline to build IoT Simulator; compiles for both Windows (x64) and Linux; copies EXE to storage for downloading ease
 # ------------------------------------------------------------------------------------------------------------------------
 # Note: This pipeline needs a variable group "IoTDemo"
-#  See ../Docs/Create-Variable-Group.md for details
+#  See ./Docs/Create-Variable-Group.md for details
 # ------------------------------------------------------------------------------------------------------------------------
 trigger:
   branches:
