--- a/.azdo/pipelines/pipes/infra-only-pipeline-template.yml
+++ b/.azdo/pipelines/pipes/infra-only-pipeline-template.yml
@@ -2,7 +2,7 @@
 # Pipeline Template to deploy Azure Resources Only
 # ------------------------------------------------------------------------------------------------------------------------
 # Note: This pipeline needs a variable group "IoTDemo"
-#  See ../Docs/Create-Variable-Group.md for details
+#  See ./Docs/Create-Variable-Group.md for details
 # ------------------------------------------------------------------------------------------------------------------------
 parameters:
 - name: environments
@@ -10,12 +10,26 @@ parameters:
   default: ['DEV']
 - name: variableGroupName
   default: 'myVariableGroupName'
+- name: runDevSecOpsScan
+  default: 'true'
+- name: runPsRuleScan
+  default: 'true'
 
 # ----------------------------------------------------------------------------------------------------
 stages:
+- ${{ if or(eq(lower(parameters.runDevSecOpsScan), 'true'), eq(lower(parameters.runPsRuleScan), 'true')) }}:
+  - stage: ScanApplication
+    displayName: Scan Application
+    jobs:
+    - template: templates/scan-code-template.yml
+      parameters:
+        environmentName: 'DEMO'
+        runDevSecOpsScan: ${{ parameters.runDevSecOpsScan }}
+        runPsRuleScan: ${{ parameters.runPsRuleScan }}
+
 - ${{ each environmentName in parameters.environments }} :
-  - stage: CreateInfrastructure${{ environmentName }}
-    displayName: ${{ environmentName }} Infrastructure
+  - stage: CreateResources${{ environmentName }}
+    displayName: Create ${{ environmentName }} Resources
     jobs:
     - template: templates/create-infra-template.yml
       parameters:
