--- a/.azdo/pipelines/website-only-pipeline.yml
+++ b/.azdo/pipelines/website-only-pipeline.yml
@@ -1,6 +1,6 @@
 # ------------------------------------------------------------------------------------------------------------------------
 # Pipeline to build and deploy Website Only
-#  See ../Docs/Create-Variable-Group.md for for info about variable group "IoTDemo"
+#  See ./Docs/Create-Variable-Group.md for for info about variable group "IoTDemo"
 # ------------------------------------------------------------------------------------------------------------------------
 name: $(date:yyyy).$(date:MM).$(date:dd)$(rev:.r)
 
@@ -17,8 +17,16 @@ trigger:
       - '**/*.bicep'
       - '**/*.md'
 
-pool:
-  vmImage: windows-latest
+# ----------------------------------------------------------------------------------------------------
+parameters:
+  - name: runDevSecOpsScan
+    displayName: Run MS DevSecOps Scan
+    type: boolean
+    default: false
+  - name: runPsRuleScan
+    displayName: Run PSRule Bicep Scan
+    type: boolean
+    default: false
 
 # ----------------------------------------------------------------------------------------------------
 stages:
@@ -29,3 +37,5 @@ stages:
     projectName: 'IoT.Dashboard'
     webAppName: 'Dashboard'
     environments: ['DEMO']  # ['DEV','PROD'] ['DEV','QA'] or ['DEV','QA','PROD']
+    runDevSecOpsScan: ${{ parameters.runDevSecOpsScan }}
+    runPsRuleScan: ${{ parameters.runPsRuleScan }}
